-- =====================================================================
-- Zedral · M2 Maintenance Intelligence — Reference Schema (PostgreSQL 15+)
-- Status: v1 for build (preventive scope). Predictive hooks present, build deferred.
-- Conventions: follows canonical DDL spec (02_CanonicalDataModel_Spec §5):
--   lower_snake_case · surrogate BIGINT ids · UUID tenant_id · TIMESTAMPTZ (UTC)
--   JSONB `ext` extension namespace · FK to canon.* · units embedded in column name.
-- Assumes the canonical core already exists:
--   canon.equipment_node(node_id)  -- ISA-95 hierarchy incl. WORK_UNIT (= asset)
--   canon.event(event_id)          -- the Event Spine (downtime_event lives here)
--   canon.cost_rate(rate_id ...)   -- effective-dated rates (D7)  [referenced by text rate code]
--   canon.personnel(person_id)
-- Time-series tables (meter_reading) are TimescaleDB hypertable candidates.
-- =====================================================================

CREATE SCHEMA IF NOT EXISTS maint;
SET search_path = maint, canon, public;

-- ---------------------------------------------------------------------
-- 0. Enumerated types
-- ---------------------------------------------------------------------
CREATE TYPE maint.criticality       AS ENUM ('A_CRITICAL','B_ESSENTIAL','C_GENERAL','D_LOW');
CREATE TYPE maint.maint_strategy     AS ENUM ('RUN_TO_FAILURE','TIME_BASED','METER_BASED','CONDITION_BASED','PREDICTIVE');
CREATE TYPE maint.item_level         AS ENUM ('SUBUNIT','MAINTAINABLE_ITEM','PART');           -- ISO 14224 L7–L9
CREATE TYPE maint.trigger_type       AS ENUM ('TIME_FIXED','TIME_FLOATING','METER','CONDITION','EVENT','INSPECTION_ROUTE');
CREATE TYPE maint.wo_type            AS ENUM ('CORRECTIVE','PREVENTIVE','CONDITION','INSPECTION');
CREATE TYPE maint.wo_source          AS ENUM ('PLAN','NOTIFICATION','BREAKDOWN','CONDITION_ALERT','M1_STOPPAGE','CMMS_IMPORT');
CREATE TYPE maint.wo_status          AS ENUM ('REPORTED','PLANNED','SCHEDULED','ASSIGNED','IN_PROGRESS','COMPLETED','CLOSED','CANCELLED','REJECTED_DUPLICATE');
CREATE TYPE maint.notif_status       AS ENUM ('OPEN','PLANNED','CONVERTED','REJECTED');
CREATE TYPE maint.task_type          AS ENUM ('INSPECT','REPLACE','LUBRICATE','CALIBRATE','CLEAN','ADJUST','TEST');
CREATE TYPE maint.task_result        AS ENUM ('PASS','FAIL','NA');
CREATE TYPE maint.meter_type         AS ENUM ('RUNTIME_HOURS','CYCLES','TONNAGE','DISTANCE_KM','STARTS','UNITS_PRODUCED');
CREATE TYPE maint.spare_txn_type     AS ENUM ('RECEIVE','ISSUE','RESERVE','UNRESERVE','ADJUST','RETURN');
CREATE TYPE maint.detection_method   AS ENUM ('OPERATOR','PM_INSPECTION','CONDITION_MONITORING','BREAKDOWN','SENSOR_ALERT');

-- ---------------------------------------------------------------------
-- 1. Asset reliability profile (1:1 extension of a canon WORK_UNIT / asset)
-- ---------------------------------------------------------------------
CREATE TABLE maint.asset_profile (
  asset_id        BIGINT PRIMARY KEY REFERENCES canon.equipment_node(node_id),
  tenant_id       UUID  NOT NULL,
  criticality     maint.criticality      NOT NULL DEFAULT 'C_GENERAL',
  default_strategy maint.maint_strategy  NOT NULL DEFAULT 'TIME_BASED',
  manufacturer    TEXT,
  model           TEXT,
  serial_no       TEXT,
  commission_date DATE,
  design_life_y   NUMERIC,                 -- design life, years
  acquisition_value NUMERIC,               -- hook for later EAM (depreciation) — not used in v1
  iso14224_class  TEXT,                    -- e.g. 'PU' pump, 'MO' motor, 'HE' heat-exchanger
  source_ref      TEXT,
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, asset_id)
);
COMMENT ON TABLE  maint.asset_profile IS 'Maintenance/reliability attributes for a canon WORK_UNIT asset (criticality, nameplate, strategy).';
COMMENT ON COLUMN maint.asset_profile.criticality IS 'RCM criticality band; drives PM intensity, WO priority, spares stocking.';

-- ---------------------------------------------------------------------
-- 2. Maintainable-item subtree (ISO 14224 L7–L9 below the WORK_UNIT)
-- ---------------------------------------------------------------------
CREATE TABLE maint.maintainable_item (
  item_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),  -- owning WORK_UNIT
  parent_item_id  BIGINT REFERENCES maint.maintainable_item(item_id),         -- self-ref for SUBUNIT→ITEM→PART
  level           maint.item_level NOT NULL,
  name            TEXT NOT NULL,
  iso14224_class  TEXT,
  native_code     TEXT,
  source_ref      TEXT,
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_item_asset   ON maint.maintainable_item (tenant_id, asset_id);
CREATE INDEX ix_item_parent  ON maint.maintainable_item (parent_item_id);

-- ---------------------------------------------------------------------
-- 3. Failure-mode library (ISO 14224 reliability language; FMECA fields)
-- ---------------------------------------------------------------------
CREATE TABLE maint.failure_mode (
  failure_mode_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT REFERENCES canon.equipment_node(node_id),
  item_id         BIGINT REFERENCES maint.maintainable_item(item_id),
  mode_code       TEXT NOT NULL,            -- e.g. 'FTS' fail-to-start, 'LEAK', 'VIB'
  mode_desc       TEXT NOT NULL,            -- the effect by which failure is observed
  mechanism       TEXT,                     -- physical/chemical process (fatigue, wear, corrosion)
  cause           TEXT,                     -- root circumstance (misalignment, lubrication)
  effect          TEXT,                     -- consequence on function/plant
  severity        SMALLINT CHECK (severity      BETWEEN 1 AND 10),
  occurrence      SMALLINT CHECK (occurrence    BETWEEN 1 AND 10),
  detectability   SMALLINT CHECK (detectability BETWEEN 1 AND 10),
  rpn             INTEGER GENERATED ALWAYS AS (severity * occurrence * detectability) STORED,
  assigned_strategy maint.maint_strategy,   -- RCM decision for this mode
  detection_method  maint.detection_method,
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_fm_asset ON maint.failure_mode (tenant_id, asset_id);
COMMENT ON COLUMN maint.failure_mode.rpn IS 'Risk Priority Number = severity × occurrence × detectability (FMECA).';

-- ---------------------------------------------------------------------
-- 4. Meters & meter readings (usage-based PM; TimescaleDB hypertable)
-- ---------------------------------------------------------------------
CREATE TABLE maint.meter (
  meter_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  meter_type      maint.meter_type NOT NULL,
  uom             TEXT NOT NULL,            -- e.g. 'h', 'cycles', 'MT', 'km'
  current_value   NUMERIC NOT NULL DEFAULT 0,  -- cached latest cumulative reading
  rollover_value  NUMERIC,                  -- if the meter wraps
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, asset_id, meter_type)
);

CREATE TABLE maint.meter_reading (
  reading_id      BIGINT GENERATED BY DEFAULT AS IDENTITY,
  tenant_id       UUID NOT NULL,
  meter_id        BIGINT NOT NULL REFERENCES maint.meter(meter_id),
  asset_id        BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  reading_ts      TIMESTAMPTZ NOT NULL,
  reading_value   NUMERIC NOT NULL,         -- cumulative meter value at reading_ts
  delta_value     NUMERIC,                  -- increment since previous reading (derived)
  source_ref      TEXT,                     -- PLC tag / manual entry / CMMS
  PRIMARY KEY (reading_id, reading_ts)
) PARTITION BY RANGE (reading_ts);
CREATE INDEX ix_meter_reading ON maint.meter_reading (meter_id, reading_ts DESC);
-- TimescaleDB: SELECT create_hypertable('maint.meter_reading','reading_ts'); (alternative to native partition)

-- ---------------------------------------------------------------------
-- 5. Maintenance plans, triggers, task lists (the PM engine model)
-- ---------------------------------------------------------------------
CREATE TABLE maint.maintenance_plan (
  plan_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT REFERENCES canon.equipment_node(node_id),   -- specific asset …
  asset_class     TEXT,                                              -- … or a class (template plan)
  name            TEXT NOT NULL,
  strategy        maint.maint_strategy NOT NULL DEFAULT 'TIME_BASED',
  default_priority SMALLINT NOT NULL DEFAULT 3 CHECK (default_priority BETWEEN 1 AND 5),
  est_duration_min INTEGER,
  requires_shutdown BOOLEAN NOT NULL DEFAULT FALSE,
  active          BOOLEAN NOT NULL DEFAULT TRUE,
  source_ref      TEXT,
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb,
  CHECK (asset_id IS NOT NULL OR asset_class IS NOT NULL)
);

CREATE TABLE maint.plan_trigger (
  trigger_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  plan_id         BIGINT NOT NULL REFERENCES maint.maintenance_plan(plan_id) ON DELETE CASCADE,
  trigger_type    maint.trigger_type NOT NULL,
  -- time triggers:
  interval_value  NUMERIC,                  -- e.g. 30
  interval_uom    TEXT,                     -- 'DAYS','WEEKS','MONTHS'
  -- meter triggers:
  meter_id        BIGINT REFERENCES maint.meter(meter_id),
  meter_interval  NUMERIC,                  -- e.g. every 2000 (in meter uom)
  -- condition triggers:
  condition_tag   TEXT,                     -- sensor tag / meter
  condition_op    TEXT CHECK (condition_op IN ('>','>=','<','<=','=')),
  condition_value NUMERIC,
  -- governance:
  compliance_window_days SMALLINT NOT NULL DEFAULT 7,
  next_due_ts     TIMESTAMPTZ,              -- cached scheduler state
  next_due_meter  NUMERIC,
  last_generated_ts TIMESTAMPTZ,
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_trigger_due ON maint.plan_trigger (tenant_id, next_due_ts);

CREATE TABLE maint.maintenance_task (
  task_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  plan_id         BIGINT NOT NULL REFERENCES maint.maintenance_plan(plan_id) ON DELETE CASCADE,
  seq             SMALLINT NOT NULL,
  description     TEXT NOT NULL,
  task_type       maint.task_type NOT NULL DEFAULT 'INSPECT',
  est_minutes     INTEGER,
  required_skill  TEXT,
  safety_permit   TEXT,
  spec_low        NUMERIC,                  -- acceptable range for a measured task
  spec_high       NUMERIC,
  spec_uom        TEXT,
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_task_plan ON maint.maintenance_task (plan_id, seq);

CREATE TABLE maint.task_part (              -- parts a task expects to consume (task BOM)
  task_part_id    BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  task_id         BIGINT NOT NULL REFERENCES maint.maintenance_task(task_id) ON DELETE CASCADE,
  spare_id        BIGINT NOT NULL,          -- FK added after spare_part defined
  qty             NUMERIC NOT NULL DEFAULT 1
);

-- ---------------------------------------------------------------------
-- 6. Notifications (problem reports) & Work Orders (the executed jobs)
-- ---------------------------------------------------------------------
CREATE TABLE maint.notification (
  notif_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  reported_ts     TIMESTAMPTZ NOT NULL DEFAULT now(),
  reported_by     BIGINT REFERENCES canon.personnel(person_id),
  symptom         TEXT,
  failure_mode_id BIGINT REFERENCES maint.failure_mode(failure_mode_id),
  severity        SMALLINT CHECK (severity BETWEEN 1 AND 5),
  status          maint.notif_status NOT NULL DEFAULT 'OPEN',
  wo_id           BIGINT,                   -- set when converted (FK added below)
  source_ref      TEXT,
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_notif_open ON maint.notification (tenant_id, status) WHERE status = 'OPEN';

CREATE TABLE maint.work_order (
  wo_id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  wo_type         maint.wo_type   NOT NULL,
  wo_source       maint.wo_source NOT NULL,
  status          maint.wo_status NOT NULL DEFAULT 'PLANNED',
  priority        SMALLINT NOT NULL DEFAULT 3 CHECK (priority BETWEEN 1 AND 5),
  plan_id         BIGINT REFERENCES maint.maintenance_plan(plan_id),
  trigger_id      BIGINT REFERENCES maint.plan_trigger(trigger_id),
  notif_id        BIGINT REFERENCES maint.notification(notif_id),
  failure_event_id BIGINT,                  -- FK added after failure_event defined
  downtime_event_ref BIGINT REFERENCES canon.event(event_id),  -- the SAME canonical downtime row M4 reads
  description     TEXT,
  root_cause      TEXT,
  created_ts      TIMESTAMPTZ NOT NULL DEFAULT now(),
  due_ts          TIMESTAMPTZ,              -- for PM compliance window
  scheduled_start TIMESTAMPTZ,
  scheduled_end   TIMESTAMPTZ,
  actual_start    TIMESTAMPTZ,
  actual_end      TIMESTAMPTZ,
  completed_ts    TIMESTAMPTZ,
  closed_ts       TIMESTAMPTZ,
  assigned_crew_ref BIGINT,
  labor_cost      NUMERIC DEFAULT 0,        -- cached rollups (authoritative lines below)
  part_cost       NUMERIC DEFAULT 0,
  downtime_cost   NUMERIC DEFAULT 0,
  source_ref      TEXT,
  lineage_ref     TEXT,
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_wo_asset    ON maint.work_order (tenant_id, asset_id);
CREATE INDEX ix_wo_status   ON maint.work_order (tenant_id, status);
CREATE INDEX ix_wo_due      ON maint.work_order (tenant_id, due_ts) WHERE status NOT IN ('CLOSED','CANCELLED');
COMMENT ON COLUMN maint.work_order.downtime_event_ref IS 'Points to the single canon.event downtime row; M2 classifies it, M4 aggregates it. Never double-count.';

ALTER TABLE maint.notification
  ADD CONSTRAINT fk_notif_wo FOREIGN KEY (wo_id) REFERENCES maint.work_order(wo_id);

CREATE TABLE maint.wo_task (                -- executed task instances on a WO
  wo_task_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  wo_id           BIGINT NOT NULL REFERENCES maint.work_order(wo_id) ON DELETE CASCADE,
  task_id         BIGINT REFERENCES maint.maintenance_task(task_id),  -- null = ad-hoc
  seq             SMALLINT,
  description     TEXT NOT NULL,
  reading_value   NUMERIC,
  reading_uom     TEXT,
  result          maint.task_result,
  notes           TEXT
);
CREATE INDEX ix_wotask_wo ON maint.wo_task (wo_id);

CREATE TABLE maint.wo_labor (
  labor_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  wo_id           BIGINT NOT NULL REFERENCES maint.work_order(wo_id) ON DELETE CASCADE,
  person_ref      BIGINT REFERENCES canon.personnel(person_id),
  hours           NUMERIC NOT NULL,
  rate_ref        TEXT,                     -- canon.cost_rate code (labour), effective-dated (D7)
  cost            NUMERIC,                  -- hours × rate (resolved at close)
  start_ts        TIMESTAMPTZ,
  end_ts          TIMESTAMPTZ
);
CREATE INDEX ix_labor_wo ON maint.wo_labor (wo_id);

-- ---------------------------------------------------------------------
-- 7. Failure events (also published to canon.event as failure_event)
-- ---------------------------------------------------------------------
CREATE TABLE maint.failure_event (
  failure_event_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  failure_mode_id BIGINT REFERENCES maint.failure_mode(failure_mode_id),
  detection_method maint.detection_method,
  down_ts         TIMESTAMPTZ NOT NULL,
  up_ts           TIMESTAMPTZ,
  downtime_h      NUMERIC GENERATED ALWAYS AS (EXTRACT(EPOCH FROM (up_ts - down_ts))/3600.0) STORED,
  is_breakdown    BOOLEAN NOT NULL DEFAULT TRUE,
  wo_id           BIGINT REFERENCES maint.work_order(wo_id),
  downtime_event_ref BIGINT REFERENCES canon.event(event_id),
  source          maint.wo_source,          -- M1_STOPPAGE / capture / CMMS_IMPORT
  source_ref      TEXT,
  lineage_ref     TEXT
);
CREATE INDEX ix_fe_asset ON maint.failure_event (tenant_id, asset_id, down_ts DESC);

ALTER TABLE maint.work_order
  ADD CONSTRAINT fk_wo_failure FOREIGN KEY (failure_event_id) REFERENCES maint.failure_event(failure_event_id);

-- ---------------------------------------------------------------------
-- 8. Spares / MRO inventory & movements
-- ---------------------------------------------------------------------
CREATE TABLE maint.spare_part (
  spare_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  part_no         TEXT NOT NULL,
  description     TEXT,
  uom             TEXT NOT NULL DEFAULT 'EA',
  unit_cost       NUMERIC,
  on_hand_qty     NUMERIC NOT NULL DEFAULT 0,
  reserved_qty    NUMERIC NOT NULL DEFAULT 0,
  reorder_point   NUMERIC,
  reorder_qty     NUMERIC,
  lead_time_days  SMALLINT,
  criticality     maint.criticality,
  bin_location    TEXT,
  source_ref      TEXT,
  ext             JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, part_no)
);

ALTER TABLE maint.task_part
  ADD CONSTRAINT fk_taskpart_spare FOREIGN KEY (spare_id) REFERENCES maint.spare_part(spare_id);

CREATE TABLE maint.spare_bom (              -- which spares serve which item/asset
  bom_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  spare_id        BIGINT NOT NULL REFERENCES maint.spare_part(spare_id),
  item_id         BIGINT REFERENCES maint.maintainable_item(item_id),
  asset_id        BIGINT REFERENCES canon.equipment_node(node_id),
  qty_per         NUMERIC NOT NULL DEFAULT 1,
  CHECK (item_id IS NOT NULL OR asset_id IS NOT NULL)
);

CREATE TABLE maint.wo_part (                -- parts consumed by a work order
  wo_part_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  wo_id           BIGINT NOT NULL REFERENCES maint.work_order(wo_id) ON DELETE CASCADE,
  spare_id        BIGINT NOT NULL REFERENCES maint.spare_part(spare_id),
  qty             NUMERIC NOT NULL,
  unit_cost       NUMERIC,
  cost            NUMERIC,                  -- qty × unit_cost
  issued_ts       TIMESTAMPTZ DEFAULT now()
);
CREATE INDEX ix_wopart_wo ON maint.wo_part (wo_id);

CREATE TABLE maint.spare_txn (              -- stock ledger
  txn_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  spare_id        BIGINT NOT NULL REFERENCES maint.spare_part(spare_id),
  wo_id           BIGINT REFERENCES maint.work_order(wo_id),
  txn_type        maint.spare_txn_type NOT NULL,
  qty             NUMERIC NOT NULL,
  txn_ts          TIMESTAMPTZ NOT NULL DEFAULT now(),
  balance_after   NUMERIC
);
CREATE INDEX ix_sparetxn_spare ON maint.spare_txn (spare_id, txn_ts DESC);

-- ---------------------------------------------------------------------
-- 9. Condition alerts (basic CBM v1) & predictive hooks (build deferred)
-- ---------------------------------------------------------------------
CREATE TABLE maint.condition_alert (
  alert_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  trigger_id      BIGINT REFERENCES maint.plan_trigger(trigger_id),
  raised_ts       TIMESTAMPTZ NOT NULL DEFAULT now(),
  tag             TEXT,
  observed_value  NUMERIC,
  threshold_value NUMERIC,
  severity        SMALLINT CHECK (severity BETWEEN 1 AND 5),
  status          TEXT NOT NULL DEFAULT 'OPEN',
  wo_id           BIGINT REFERENCES maint.work_order(wo_id)
);

-- Predictive (PdM) is FUTURE SCOPE — see 08_Predictive spec. The table below is the
-- forward-compatible health/RUL output slot; no producer is built in v1.
CREATE TABLE maint.asset_health (           -- written by future OSA-CBM service; empty in v1
  health_id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  assessed_ts     TIMESTAMPTZ NOT NULL,
  health_grade    SMALLINT,                 -- 0–100
  anomaly_score   NUMERIC,
  rul_hours       NUMERIC,                  -- remaining useful life forecast
  model_ref       TEXT,                     -- MLflow model id (future)
  advisory        TEXT
);
COMMENT ON TABLE maint.asset_health IS 'FUTURE-SCOPE output of the OSA-CBM/prognostics pipeline (RUL, health). No v1 producer.';

-- ---------------------------------------------------------------------
-- 10. KPI daily rollup (materialized to the serving/mart layer; example grain)
-- ---------------------------------------------------------------------
CREATE TABLE maint.kpi_asset_daily (
  tenant_id       UUID NOT NULL,
  asset_id        BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  kpi_date        DATE NOT NULL,
  failures        INTEGER DEFAULT 0,
  downtime_h      NUMERIC DEFAULT 0,
  repair_h        NUMERIC DEFAULT 0,
  operating_h     NUMERIC DEFAULT 0,
  mtbf_h          NUMERIC,
  mttr_h          NUMERIC,
  availability    NUMERIC,                  -- MTBF/(MTBF+MTTR), inherent
  pm_scheduled    INTEGER DEFAULT 0,
  pm_completed    INTEGER DEFAULT 0,
  pm_compliance   NUMERIC,
  maint_cost      NUMERIC DEFAULT 0,
  downtime_cost   NUMERIC DEFAULT 0,
  PRIMARY KEY (tenant_id, asset_id, kpi_date)
);

-- =====================================================================
-- End M2 reference schema. Migrations via Flyway/Alembic (additive, versioned).
-- =====================================================================
