erDiagram
  WORK_UNIT ||--o{ SUBUNIT : "contains"
  SUBUNIT ||--o{ MAINTAINABLE_ITEM : "contains"
  MAINTAINABLE_ITEM ||--o{ FAILURE_MODE : "exhibits"
  WORK_UNIT ||--o{ FAILURE_EVENT : "suffers"
  FAILURE_MODE ||--o{ FAILURE_EVENT : "classifies"
  WORK_UNIT ||--o{ MAINTENANCE_WORK_ORDER : "serviced by"
  FAILURE_EVENT ||--o| MAINTENANCE_WORK_ORDER : "triggers (corrective)"
  MAINTENANCE_PLAN ||--o{ MAINTENANCE_WORK_ORDER : "generates (preventive)"
  MAINTENANCE_PLAN ||--o{ MAINTENANCE_TASK : "lists"
  MAINTENANCE_WORK_ORDER ||--o{ WO_LABOR : "consumes"
  MAINTENANCE_WORK_ORDER ||--o{ WO_PART : "consumes"
  SPARE_PART ||--o{ WO_PART : "issued as"
  MAINTAINABLE_ITEM ||--o{ SPARE_PART : "stocked as"
  WORK_UNIT ||--o{ METER : "has"
  METER ||--o{ METER_READING : "records"
  WORK_UNIT ||--o{ SENSOR_READING : "streams"
  COST_RATE ||--o{ WO_LABOR : "prices"
  COST_RATE ||--o{ FAILURE_EVENT : "prices downtime"

  FAILURE_MODE {
    string failure_mode_id PK
    string item_ref FK
    string mechanism
    string cause
    int severity
    int occurrence
    int detectability
    string assigned_strategy
  }
  MAINTENANCE_WORK_ORDER {
    string wo_id PK
    string asset_ref FK
    string wo_type "corrective|preventive|condition|inspection"
    string status
    string priority
    datetime created_ts
    datetime completed_ts
  }
  FAILURE_EVENT {
    string event_id PK
    string asset_ref FK
    string failure_mode_ref FK
    datetime down_ts
    datetime up_ts
    float downtime_h
  }
